--- a/Optimization_10.ipynb
+++ b/Optimization_10.ipynb
@@ -244,6 +244,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![\"Myes\"]()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This is my estimation when I first saw 10 places. There is a river in the middle so the most natural for me to guest is walk across the river as little as possible. The following code will estimate the amount of minute I have to walk base on Google Map"
    ]
   },
